--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
     </p>
     <p>Office: <br />21, Kashipur</p>
     <hr size="3" noshade="" />
+    <h3>Type Your Quary</h3>
+    <form action="mailto:bamit610@gmail.com" method="text" enctype="text/plain">
     <table>
       <tr>
         <td><label for="Name">Name:</label></td>
@@ -46,5 +48,6 @@
       </tr>
     </table>
     <input type="submit" />
+    </form>
   </body>
 </html>
